[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/rooot.png" type="Texture" id=1]
[ext_resource path="res://components/HackButton.gd" type="Script" id=2]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
uniform vec4 glow_color : hint_color = vec4(1,1,1,1); 

void fragment() {
	COLOR = texture(TEXTURE, UV) + glow_color;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/glow_color = Color( 0.254902, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[node name="HackButton" type="Area2D"]
monitoring = false
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_HackButton_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_HackButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_HackButton_mouse_exited"]
